--- a/main/account/templates/account/edit.html
+++ b/main/account/templates/account/edit.html
@@ -3,7 +3,7 @@
 {% block content %}
     <h1>Edit your account</h1>
     <p>You can edit your account using the following form:</p>
-    <form action="" method='post' encrypt='multipart/form-data'>
+    <form method='post' encrypt='multipart/form-data'>
         {{ user_form.as_p }}
         {{ profile_form.as_p }}
         {% csrf_token %}
